Don't allow operations to be performed on items which are already being operated on. Namely holding down the Del key was triggering multiple Deletes/Moves for the same message pointer, which for any but the first command was dangeling. Quite obvious, in retrospect...

BUG: 90320

svn path=/trunk/KDE/kdepim/; revision=424363